[gd_scene load_steps=2 format=3 uid="uid://ckidyhlsikc1d"]

[ext_resource type="Script" path="res://src/Scenes/UI/multiplayer_menu.gd" id="1_3tcqe"]

[node name="multiplayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3tcqe")

[node name="Room Ctrl" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 154.0
offset_right = 257.0
offset_bottom = 322.0

[node name="Create Room" type="Button" parent="Room Ctrl"]
layout_mode = 2
text = "Create Room"

[node name="Join Room" type="Button" parent="Room Ctrl"]
layout_mode = 2
text = "Join Room"

[node name="Back" type="Button" parent="Room Ctrl"]
layout_mode = 2
text = "Back"

[node name="Create Ctrl" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 371.0
offset_top = 148.0
offset_right = 571.0
offset_bottom = 309.0

[node name="Room Name Label" type="Label" parent="Create Ctrl"]
layout_mode = 2
text = "Room Name:"

[node name="Room Name" type="LineEdit" parent="Create Ctrl"]
layout_mode = 2

[node name="Port Label" type="Label" parent="Create Ctrl"]
layout_mode = 2
text = "Port:"

[node name="Port" type="LineEdit" parent="Create Ctrl"]
layout_mode = 2

[node name="Submit" type="Button" parent="Create Ctrl"]
layout_mode = 2
text = "Submit"

[node name="Join Ctrl" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 371.0
offset_top = 192.0
offset_right = 571.0
offset_bottom = 288.0

[node name="Port Label" type="Label" parent="Join Ctrl"]
layout_mode = 2
text = "Port:"

[node name="Port" type="LineEdit" parent="Join Ctrl"]
layout_mode = 2

[node name="Submit" type="Button" parent="Join Ctrl"]
layout_mode = 2
text = "Submit"

[node name="Output" type="Label" parent="."]
layout_mode = 0
offset_left = 267.0
offset_top = 361.0
offset_right = 331.0
offset_bottom = 387.0
text = "[output]"

[connection signal="pressed" from="Room Ctrl/Create Room" to="." method="_on_create_room_pressed"]
[connection signal="pressed" from="Room Ctrl/Join Room" to="." method="_on_join_room_pressed"]
[connection signal="pressed" from="Room Ctrl/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Create Ctrl/Submit" to="." method="_on_create_submit_pressed"]
[connection signal="pressed" from="Join Ctrl/Submit" to="." method="_on_join_submit_pressed"]
